Add FishingType enum and requirement